--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 
                             <h2 class="dark"> Разработка сайтов</h2>
                             <p> Создание продающих сайтов для вашего бизнеса. От сайта-визитки до онлайн-магазина.</p>
-                            <a href="#" class="proposal-button modalRequestBtn" data-tarif="Разработка сайтов"> Узнать
-                                больше </a>
+                            <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Разработка сайтов"> Узнать
+                                больше </a> -->
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -259,7 +259,7 @@
                                     </g>
                                 </g>
                                 <g>
-                                    
+
                                     <g>
                                         <rect x="120" y="216" width="16" height="16"></rect>
                                     </g>
@@ -278,9 +278,9 @@
                             <h2 class="dark"> Модернизация старого</h2>
                             <p> Вам нравится ваш нынешний сайт, но вы хотите сделать его адаптивным или добавить новый
                                 функционал - не проблема! Позвоните нам!</p>
-                            <a href="#" class="proposal-button modalRequestBtn" data-tarif="Модернизация старого">
+                            <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Модернизация старого">
                                 Узнать больше
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
@@ -300,7 +300,7 @@
                         <h2 class="dark"> Техподдержка</h2>
                         <p> Заказав сайт у нас, Вы получаете 1 год бесплатной техподдержки. А также, мы предоставляем
                             услуги по поддержке сторонних сайтов.</p>
-                        <a href="#" class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше
+                        <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше -->
                         </a>
                     </div>
                 </div>
@@ -1583,7 +1583,7 @@
                 </div>
             </div>
         </div>
-<!--<script src="https://cdn.tailwindcss.com"></script> -->
+        <!--<script src="https://cdn.tailwindcss.com"></script> -->
 
         <script src="./script.js"></script>
 </body>
