--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="user-box">
                             <input required="" name="" type="tel" placeholder="+998 91 123 45 67">
                         </div>
-                        <a href="#">
+                        <a href="">
                             <span></span>
                             <span></span>
                             <span></span>
