--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
                                 <li class="nav-item"><a href="#contacts">Контакты</a></li>
                             </ul>
                         </ul>
+
+                        <style>
+                            html {
+    scroll-behavior: smooth;
+}
+
+.nav-item a {
+    text-decoration: none;
+    color: inherit;
+}
+                        </style>
                     </nav>
                 </div>
             </div>
