--- a/index.html
+++ b/index.html
@@ -34,11 +34,26 @@
                     <nav class="collapse navbar-collapse" id="navbar">
                         <ul class="nav navbar-nav">
                             <li class="nav-item logo-item">
-                                <a href="#slider"> <img class="head_img" src="./images/icons/samSOftline-logo.png"
-                                        alt="SamSoftline Logo"></a>
+                                <a href="">
+                                     <img class="nav_logo" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo"></a>
                             </li>
 
 
+                            <style>
+                                .nav_logo {
+                                    background-color: #fff;
+                                    margin-left: 20px;
+                                    border-radius: 50%;
+                                    width: 50px;
+                                }
+
+                                .nav_logo img {
+                                    /* background-color: #fff;
+                                    margin-left: 20px;
+                                    border-radius: 50%; */
+                                    width: 100px;
+                                }
+                            </style>
                             <div class="burger-menu" id="burgerMenu">
                                 <span></span>
                                 <span></span>
@@ -70,7 +85,7 @@
                             <p class="headerH2"><i>SAM SOFT LINE </i></p>
 
 
-                            <img id="logo_header" src="./images/icons/samSOftline-logo.png" alt="">
+                            <!-- <img id="logo_header" src="./images/icons/samSOftline-logo.png" alt=""> -->
 
                         </div>
                     </b></small>
@@ -328,7 +343,7 @@
                         </a>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -1022,7 +1037,7 @@
 
 
 
-    
+
 
     <div id="statistics">
         <div class="container">
