--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
                     <nav class="collapse navbar-collapse" id="navbar">
                         <ul class="nav navbar-nav">
                             <li class="nav-item logo-item">
-                                <a href="">
-                                     <img class="nav_logo" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo"></a>
+
+                                <a class="nav_logo" href="">
+                                    <div>
+                                     <img class="nav_logo" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo">
+                                    </div>
+                                    </a>
+
                             </li>
 
 
                             <style>
-                                .nav_logo {
+                                .nav_logo div {
                                     background-color: #fff;
                                     margin-left: 20px;
                                     border-radius: 50%;
@@ -51,7 +56,10 @@
                                     /* background-color: #fff;
                                     margin-left: 20px;
                                     border-radius: 50%; */
-                                    width: 100px;
+                                    align-items: center;
+                                    text-align: center;
+                                    justify-content: center;
+                                    width: 50px;
                                 }
                             </style>
                             <div class="burger-menu" id="burgerMenu">
