--- a/index.html
+++ b/index.html
@@ -1573,8 +1573,8 @@
     <div>
         <div class="zayafka">
             <div data-admin-theme="black" class="zayafka2">
-                <strong class="skidka"> -40% </strong>
-                <span class="timer" data-type="timer">24:42:41</span>
+                <!-- <strong class="skidka">  </strong>
+                <span class="timer" data-type="timer"></span> -->
             </div>
             <button class="btn_ostavit" type="button" data-gtm="lead" data-pixel="msCavChr"
                 data-action-button="order-modal">
