--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
 
                             <h2 class="dark"> Разработка сайтов</h2>
                             <p> Создание продающих сайтов для вашего бизнеса. От сайта-визитки до онлайн-магазина.</p>
-                            <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Разработка сайтов"> Узнать
-                                больше </a> -->
+                            <a href="#" class="proposal-button modalRequestBtn" data-tarif="Разработка сайтов"> Узнать
+                                больше </a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -304,9 +304,9 @@
                             <h2 class="dark"> Модернизация старого</h2>
                             <p> Вам нравится ваш нынешний сайт, но вы хотите сделать его адаптивным или добавить новый
                                 функционал - не проблема! Позвоните нам!</p>
-                            <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Модернизация старого">
+                            <a href="#" class="proposal-button modalRequestBtn" data-tarif="Модернизация старого">
                                 Узнать больше
-                            </a> -->
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -326,7 +326,7 @@
                         <h2 class="dark"> Техподдержка</h2>
                         <p> Заказав сайт у нас, Вы получаете 1 год бесплатной техподдержки. А также, мы предоставляем
                             услуги по поддержке сторонних сайтов.</p>
-                        <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше -->
+                        <a href="#" class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше
                         </a>
                     </div>
                 </div>
@@ -347,7 +347,7 @@
                         <h2 class="dark"> Техподдержка</h2>
                         <p> Заказав сайт у нас, Вы получаете 1 год бесплатной техподдержки. А также, мы предоставляем
                             услуги по поддержке сторонних сайтов.</p>
-                        <!-- <a href="#" class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше -->
+                        <a href="#" class="proposal-button modalRequestBtn" data-tarif="Техподдержка"> Узнать больше
                         </a>
                     </div>
                 </div>
