--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 
                                 <a class="nav_logo" href="">
                                     <div>
-                                     <img class="nav_logo" src="./images/icons/samSOftline-logo.png" alt="SamSoftline Logo">
+                                        <img class="nav_logo" src="./images/icons/samSOftline-logo.png"
+                                            alt="SamSoftline Logo">
                                     </div>
-                                    </a>
+                                </a>
 
                             </li>
 
@@ -91,15 +92,15 @@
                         вместе с <br>
                         <div class="logo_div">
                             <p class="headerH2"><i>SAM SOFT LINE </i></p>
-
-
-                            <!-- <img id="logo_header" src="./images/icons/samSOftline-logo.png" alt=""> -->
-
                         </div>
                     </b></small>
                 </h1>
             </div>
 
+
+            <style>
+          
+            </style>
 
             <div class="col-md-6 online_request_block">
                 <div class="login-box1">
@@ -1572,7 +1573,7 @@
     </div>
     <div>
         <div class="zayafka">
-    
+
             <button class="btn_ostavit" type="button" data-gtm="lead" data-pixel="msCavChr"
                 data-action-button="order-modal">
                 <span class="text"> Оставить заявку </span>
