--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px"
-                            viewBox="0 0 420.96 420.96" width="70" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 420.96 420.96" width="70" style="float: left;"
                             xml:space="preserve">
                             <g>
                                 <g>
@@ -374,7 +374,7 @@
                     </div>
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
-                            viewBox="0 0 512 512" width="57" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 512 512" width="57" style="float: left;"
                             xml:space="preserve">
                             <g transform="translate(1)">
                                 <g>
@@ -395,7 +395,7 @@
                     </div>
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
-                            viewBox="0 0 511 511" width="70" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 511 511" width="70" style="float: left;"
                             xml:space="preserve">
                             <g>
                                 <path
@@ -456,7 +456,7 @@
                     </div>
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
-                            viewBox="0 0 478.703 478.703" width="60" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 478.703 478.703" width="60" style="float: left;"
                             xml:space="preserve">
                             <g>
                                 <g>
@@ -477,7 +477,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
-                            viewBox="0 0 512 512" width="64" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 512 512" width="64" style="float: left;"
                             xml:space="preserve">
                             <g>
                                 <g>
@@ -557,7 +557,7 @@
                     </div>
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
-                            viewBox="0 0 511.854 511.854" width="63" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 511.854 511.854" width="63" style="float: left;"
                             xml:space="preserve">
                             <g>
                                 <g>
@@ -943,7 +943,7 @@
                     </div>
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
-                            viewBox="0 0 480 480" width="60" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 480 480" width="60" style="float: left; "
                             xml:space="preserve">
                             <g>
                                 <g>
@@ -1014,7 +1014,7 @@
                     </div>
                     <div class="benefit"> <svg xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px"
-                            viewBox="0 0 512.001 512.001" width="65" style="float: left; margin-rigt: 30px;"
+                            viewBox="0 0 512.001 512.001" width="65" style="float: left;"
                             xml:space="preserve">
                             <g>
                                 <g>
