--- a/pages/onas.html
+++ b/pages/onas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow: auto;">
 
 <head>
     <meta charset="UTF-8">
@@ -36,10 +36,9 @@
                                 <span></span>
                             </div>
                             <ul class="nav-links" id="navLinks">
-                                <li class="nav-item"><a href="#services">Услуги</a></li>
-                                <li class="nav-item"><a href="#benefits">Плюсы</a></li>
-                                <li class="nav-item"><a href="#adres">Наш адрес</a></li>
-                                <li class="nav-item"><a href="./pages/onas.html">О нас</a></li>
+                                <li class="nav-item"><a href="../index.html#services">Услуги</a></li>
+                                <li class="nav-item"><a href="../index.html#benefits">Плюсы</a></li>
+                                <li class="nav-item"><a href="../index.html#adres">Наш адрес</a></li>
                                 <li class="nav-item"><a href="#contacts">Контакты</a></li>
                             </ul>
                         </ul>
@@ -50,8 +49,40 @@
     </header>
 
     <main>
-        <div></div>
+        <div>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+            <h1>Hello world</h1>
+        </div>
     </main>
+
+
+    <div id="contacts">
+        <div class="container">
+            <div class="row">
+                <h1 class="title light visible">Оставьте заявку</h1>
+            </div>
+            <div class="col-md-4"> <input type="text" placeholder="Ваше имя" name="name" class="proposal-field"></div>
+            <div class="col-md-4"> <input type="text" placeholder="Ваш номер" name="phone" class="proposal-field"></div>
+            <div class="col-md-4"> <input type="text" placeholder="Ваша электронная почта" name="email" class="proposal-field"></div>
+            <div class="col-md-12"><textarea placeholder="Сообщение" name="message" class="proposal-field"></textarea>
+            </div>
+            <div class="col-md-2 col-md-offset-5"> <a href="#" class="proposal-button">Отправить</a></div>
+        </div>
+    </div>
 
 </body>
 
