--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/onas.css">
+    <link rel="stylesheet" href="../css/about.css">
     <link rel="icon" sizes="32x32" href="../images/photo_2024-08-08_20-13-27.jpg">
     <title>Sam Soft Line - О нас</title>
 </head>
