--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <li class="nav-item"><a href="#services">Услуги</a></li>
                                 <li class="nav-item"><a href="#benefits">Плюсы</a></li>
                                 <li class="nav-item"><a href="#adres">Наш адрес</a></li>
-                                <li class="nav-item"><a href="./pages/onas.html">О нас</a></li>
+                                <li class="nav-item"><a href="./pages/about.html">О нас</a></li>
                                 <li class="nav-item"><a href="#contacts">Контакты</a></li>
                             </ul>
                         </ul>
