--- a/pages/about.html
+++ b/pages/about.html
@@ -77,7 +77,8 @@
             </div>
             <div class="col-md-4"> <input type="text" placeholder="Ваше имя" name="name" class="proposal-field"></div>
             <div class="col-md-4"> <input type="text" placeholder="Ваш номер" name="phone" class="proposal-field"></div>
-            <div class="col-md-4"> <input type="text" placeholder="Ваша электронная почта" name="email" class="proposal-field"></div>
+            <div class="col-md-4"> <input type="text" placeholder="Ваша электронная почта" name="email"
+                    class="proposal-field"></div>
             <div class="col-md-12"><textarea placeholder="Сообщение" name="message" class="proposal-field"></textarea>
             </div>
             <div class="col-md-2 col-md-offset-5"> <a href="#" class="proposal-button">Отправить</a></div>
